syntax = "proto3";

package pb;

import "pb/books.proto";
import "pb/common.proto";

service GoodsService{
    rpc AddGoods (Goods) returns (NormalResp);               //添加商品
    rpc UpdateGoods (Goods) returns (NormalResp);            //更新商品
    rpc SearchGoods (Goods) returns (GoodsDetailResp);      //查找商品
    rpc GetGoodsByIdOrIsbn (Goods) returns (NormalGoodsResp);//通过isbn获取商品
    rpc GetGoodsTypeInfo (TypeGoods) returns (TypeGoodsResp); //查询商品单类型
    rpc DelOrRemoveGoods (DelGoodsReq) returns (NormalResp);  //删除或者下架商品
    rpc GoodsLocationOperate (GoodsLocation) returns (GoodsLocationResp); //书本货架操作
    rpc AppSearchGoods (Goods) returns (GoodsDetailResp);   //手机端查找商品 ,去除location
}



message Goods{
    string id = 1;
    string book_id = 2;
    string store_id = 3;
    string isbn = 4;
    string title = 5;
    int64 new_book_price = 6;
    int64 new_book_amount = 7;
    int64 old_book_price = 8;
    int64 old_book_amount = 9;
    int64 create_at = 10;
    int64 update_at = 11;
    int64 sales_status = 12;        //关联数据库字段 is_selling 状态值由GoodsStatus管理
    repeated GoodsLocation location = 13;
    string seller_id = 14;
    int64 search_picture = 15;//-100 所有的 0有图片 1无图片
    int64 search_type = 16; //-100 所有的  0新书 1旧书
    int64 search_amount = 17;//-100 所有
    int64 page = 18;
    int64 size = 19;
    bool is_selling = 20;
    string author = 21;
    string publisher = 22;
    bool has_new_book = 23;
    bool has_old_book = 24;
}

message TypeGoods{
    string id = 1;
    string book_id = 2;
    string store_id = 3;
    string isbn = 4;
    string title = 5;
    bool is_selling = 6;
    int64 type = 7;
    int64 price = 8;
    int64 amount = 9;
    string author = 10;
    string publisher = 11;
    string goods_image = 12;
    int64 selling_price = 13;

}

message TypeGoodsResp{
    string code = 1;
    string message = 2;
    TypeGoods data = 3;
}


message NormalGoodsResp{
    string code =1;
    string message = 2;
    Goods data = 3;
}

message GoodsLocationResp{
    string code = 1;
    string message = 2;
    GoodsLocation data = 3;
}

message GoodsSalesModel{            //当前云店商品数量统计
    string goods_id = 1;
    int64 type = 2;
    int64 price = 3;
    int64 amount = 4;
    repeated GoodsLocation location = 13;
}


message GoodsLocation{
    string id = 1;
    string goods_id = 2;
    int64 type = 3;                 //0 新 1旧
    string storehouse_id = 4;
    string shelf_id = 5;
    string floor_id = 6;
    int64 create_at = 7;
    int64 update_at = 8;
    int64 amount = 9;
    int64 price = 10;
    int64 operate_type =11; // 0 update 1 del  2 add
}

message DelGoodsReq{
    repeated DelGoodsModel data = 1;
}

message DelGoodsModel{
    string id = 1;
    int64 new_or_old = 2;
    int64 operate_type = 3; //0 下架 1 删除
}

message GoodsDetailResp{
    string code = 1;
    string message = 2;
    repeated GoodsSearchResult data = 3;
}
message GoodsSearchResult{
    Book book = 1;
    string goods_id = 2;
    string store_id = 3;
    GoodsSalesModel new_book = 4;
    GoodsSalesModel old_book = 5;
    int64 update_at = 6;
}
